--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,13 @@
 body {
-	background-color: whitesmoke;
-	margin: 0;
-	overscroll-behavior-y: none;
+  background-color: whitesmoke;
+  margin: 0;
+  overscroll-behavior-y: none;
 }
 
 #app {
-	block-size: 100dvb;
-	display: grid;
-	min-inline-size: 48rem;
-	overflow-x: scroll;
+  block-size: 100dvb;
+  display: grid;
+  min-inline-size: 48rem;
+  overflow-x: scroll;
+  grid-template-rows: min-content 1fr;
 }
